# geo-cy-data

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  cli_reference.md  dataset_schema.md  development.md  paper2_degeneration_proxy_definition.md  quickstart.md
examples/: README.md  cefalu_quartic_lambda_0_75.yaml  cefalu_quartic_lambda_1_0.yaml  fermat_quartic_smoke.yaml
paper/: abstract_draft.md  introduction_notes.md  methods_notes.md  outline.md  reproducibility_notes.md  results_notes.md
paper/assets/: core_results_table.csv  core_results_table.md  robustness_table.csv  robustness_table.md
src/geocydata/: __init__.py
src/geocydata/baselines/: __init__.py  fubini_study.py
src/geocydata/cli/: __init__.py  main.py
src/geocydata/experiments/: __init__.py  data.py  degeneration_fragility.py  models.py  paper_assets.py  protocols.py  release.py  reporting.py  runner.py  sweep.py  validate_paper_assets.py  validate_release.py
src/geocydata/export/: manifest.py  parquet_io.py
src/geocydata/features/: __init__.py  invariants.py
src/geocydata/geometry/: __init__.py  cefalu.py  charts.py  fermat.py  hypersurfaces.py  projective.py
src/geocydata/registry/: __init__.py  cases.py  geometries.py
src/geocydata/sampling/: __init__.py  (+1 more)
tests/: test_cli_smoke.py  test_degeneration_fragility.py  test_experiments.py  test_hypersurface_points.py  test_manifest.py  test_projective_invariants.py  test_registry.py  test_symmetry.py
(+14 files in other folders)
